--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,11 @@
-title: Your awesome title
-author: GitHub User
-email: your-email@domain.com
+title: KKK
+author: Kandace
+email: kiwdev1984@icloud.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  parctice blog site
 
 # social links
-twitter_username: your-twitter-handle
-github_username:  your-github-handle
+Kandace: https://www.facebook.com/kmamachopchop
+KandaceW: https://github.com/KandaceW
 
-show_excerpts: true # set to false to remove excerpts on the homepage
+show_excerpts: false # set to false to remove excerpts on the homepage
